[project]
name = "amcl"
version = "0.0.1"
description = "A brief description of what this project does"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Joshua J. Damanik", email = "joshuajdmk@gmail.com" },
]
classifiers = [
    "License :: GNU General Public License v3 (GPLv3)",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://github.com/damanikjosh/amcl_python"

[build-system]
requires = ["scikit-build-core >=0.5.0", "nanobind >=1.20.0"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.8+
wheel.py-api = "cp38"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
skip = "pp* *-musllinux_*"
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
archs = ["auto64"]          # Only target 64 bit architectures

# Optional: run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"